--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -83,6 +83,24 @@ by flags and bit operations.\\
 \begin{center}
     \fbox{\texttt{insert(index)}$\equiv$\texttt{flag|(1<<index)} and \texttt{count(index)}$\equiv$\texttt{flag\&(1<<index)}}
 \end{center}
+\begin{lstlisting}
+template<int N>
+class Inclusion{
+    int a[(N+31/32)];
+public:
+    Inclusion(){
+        for(int i=0;i<(N+31)/32;i++){
+            a[i] = 0;
+        }
+    }
+    void insert(int i){
+        a[i/32] |= 1 << (i % 32);
+    }
+    int count(int i){
+        return a[i/32] & (1<<(i%32));
+    }
+};
+\end{lstlisting}
 \textbf{Note:} The great thing about sets and maps is the uniqueness of their values.
 So, to find the maximum element less than an element, we simply \texttt{find()} the element
 in the set and decrement the iterator.
