--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -83,10 +83,11 @@ by flags and bit operations.\\
 \begin{center}
     \fbox{\texttt{insert(index)}$\equiv$\texttt{flag|(1<<index)} and \texttt{count(index)}$\equiv$\texttt{flag\&(1<<index)}}
 \end{center}
+The data structure below outperforms \texttt{set} and \texttt{unordered\_set} in a program where only inclusion is to be checked, for a fixed range of integers.
 \begin{lstlisting}
 template<int N>
 class Inclusion{
-    int a[(N+31/32)];
+    int a[(N+31)/32];
 public:
     Inclusion(){
         for(int i=0;i<(N+31)/32;i++){
